--- a/date/2025-06/index.htm
+++ b/date/2025-06/index.htm
@@ -110,6 +110,71 @@
                 <div class="row">
                     <div class="col-md-9">
                         <div class="xcblog-blog-list">
+                                                        <div class="row item xcblog-blog-item" data-date="2025-06-07">
+                                <div class="col-md-3">
+                                    <a href="/free-nodes/2025-6-7-clash-v2ray-ss-ssr.htm" class="xcblog-blog-url">
+                                        <img src="/uploads/20240810/95bb0467eb6b57893fa4076c6c174669.webp" alt="「6月7日」最高速度18.1M/S，2025年Shadowrocket/V2ray/SSR/Clash每天更新免费节点订阅链接" class="img-fluid rounded">
+                                    </a>
+                                </div>
+                                <div class="col-md-9">
+                                    <a href="/free-nodes/2025-6-7-clash-v2ray-ss-ssr.htm" class="xcblog-blog-url">
+                                        <h3 class="section-title mb-3 xcblog-blog-title">「6月7日」最高速度18.1M/S，2025年Shadowrocket/V2ray/SSR/Clash每天更新免费节点订阅链接</h3>
+                                    </a>
+                                    <p>这一次的节点更新覆盖了加拿大、韩国、新加坡、日本、香港、美国、欧洲等地区,最高速度可达18.1 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
+                                </div>
+                            </div>
+                                                        <div class="row item xcblog-blog-item" data-date="2025-06-06">
+                                <div class="col-md-3">
+                                    <a href="/free-nodes/2025-6-6-node-share.htm" class="xcblog-blog-url">
+                                        <img src="/uploads/20240810/1fd790c0c842e87fd7fc3b1714ac6d9d.webp" alt="「6月6日」最高速度22.6M/S，2025年Clash/SSR/Shadowrocket/V2ray每天更新免费节点订阅链接" class="img-fluid rounded">
+                                    </a>
+                                </div>
+                                <div class="col-md-9">
+                                    <a href="/free-nodes/2025-6-6-node-share.htm" class="xcblog-blog-url">
+                                        <h3 class="section-title mb-3 xcblog-blog-title">「6月6日」最高速度22.6M/S，2025年Clash/SSR/Shadowrocket/V2ray每天更新免费节点订阅链接</h3>
+                                    </a>
+                                    <p>这一次的节点更新覆盖了加拿大、欧洲、韩国、日本、香港、美国、新加坡等地区,最高速度可达22.6 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
+                                </div>
+                            </div>
+                                                        <div class="row item xcblog-blog-item" data-date="2025-06-05">
+                                <div class="col-md-3">
+                                    <a href="/free-nodes/2025-6-5-node-share.htm" class="xcblog-blog-url">
+                                        <img src="/uploads/20240810/23719af02f410bf11c49229669ae7202.webp" alt="「6月5日」最高速度19M/S，2025年SSR/V2ray/Shadowrocket/Clash每天更新免费节点订阅链接" class="img-fluid rounded">
+                                    </a>
+                                </div>
+                                <div class="col-md-9">
+                                    <a href="/free-nodes/2025-6-5-node-share.htm" class="xcblog-blog-url">
+                                        <h3 class="section-title mb-3 xcblog-blog-title">「6月5日」最高速度19M/S，2025年SSR/V2ray/Shadowrocket/Clash每天更新免费节点订阅链接</h3>
+                                    </a>
+                                    <p>这一次的节点更新覆盖了欧洲、日本、新加坡、加拿大、韩国、香港、美国等地区,最高速度可达19 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
+                                </div>
+                            </div>
+                                                        <div class="row item xcblog-blog-item" data-date="2025-06-04">
+                                <div class="col-md-3">
+                                    <a href="/free-nodes/2025-6-4-free-node-subscribe.htm" class="xcblog-blog-url">
+                                        <img src="/uploads/20240810/6bd468ee81514cc7f73ce3590652082a.webp" alt="「6月4日」最高速度18.3M/S，2025年SSR/Clash/V2ray/Shadowrocket每天更新免费节点订阅链接" class="img-fluid rounded">
+                                    </a>
+                                </div>
+                                <div class="col-md-9">
+                                    <a href="/free-nodes/2025-6-4-free-node-subscribe.htm" class="xcblog-blog-url">
+                                        <h3 class="section-title mb-3 xcblog-blog-title">「6月4日」最高速度18.3M/S，2025年SSR/Clash/V2ray/Shadowrocket每天更新免费节点订阅链接</h3>
+                                    </a>
+                                    <p>这一次的节点更新覆盖了日本、韩国、欧洲、香港、新加坡、加拿大、美国等地区,最高速度可达18.3 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
+                                </div>
+                            </div>
+                                                        <div class="row item xcblog-blog-item" data-date="2025-06-03">
+                                <div class="col-md-3">
+                                    <a href="/free-nodes/2025-6-3-clash-v2ray-ss-ssr.htm" class="xcblog-blog-url">
+                                        <img src="/uploads/20240810/556b5dbcfe6584f0352cb6fadde73408.webp" alt="「6月3日」最高速度18M/S，2025年Shadowrocket/Clash/V2ray/SSR每天更新免费节点订阅链接" class="img-fluid rounded">
+                                    </a>
+                                </div>
+                                <div class="col-md-9">
+                                    <a href="/free-nodes/2025-6-3-clash-v2ray-ss-ssr.htm" class="xcblog-blog-url">
+                                        <h3 class="section-title mb-3 xcblog-blog-title">「6月3日」最高速度18M/S，2025年Shadowrocket/Clash/V2ray/SSR每天更新免费节点订阅链接</h3>
+                                    </a>
+                                    <p>这一次的节点更新覆盖了韩国、美国、新加坡、香港、欧洲、日本、加拿大等地区,最高速度可达18 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
+                                </div>
+                            </div>
                                                         <div class="row item xcblog-blog-item" data-date="2025-06-02">
                                 <div class="col-md-3">
                                     <a href="/free-nodes/2025-6-2-free-v2ray.htm" class="xcblog-blog-url">
@@ -146,16 +211,16 @@
     </div>
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
-                        <li class="py-2"><a href="/free-nodes/2025-5-30-free-v2ray-subscribe.htm" title="「5月30日」最高速度21.1M/S，2025年Shadowrocket/SSR/V2ray/Clash每天更新免费节点订阅链接">「5月30日」最高速度21.1M/S，2025年Shadowrocket/SSR/V2ray/Clash每天更新免费节点订阅链接</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-5-13-free-subscribe-node.htm" title="「5月13日」最高速度19.8M/S，2025年V2ray/Shadowrocket/SSR/Clash每天更新免费节点订阅链接">「5月13日」最高速度19.8M/S，2025年V2ray/Shadowrocket/SSR/Clash每天更新免费节点订阅链接</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-5-12-free-subscribe-node.htm" title="「5月12日」最高速度22.1M/S，2025年Clash/V2ray/Shadowrocket/SSR每天更新免费节点订阅链接">「5月12日」最高速度22.1M/S，2025年Clash/V2ray/Shadowrocket/SSR每天更新免费节点订阅链接</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-5-3-node-share.htm" title="「5月3日」最高速度22.6M/S，2025年V2ray/Clash/Shadowrocket/SSR每天更新免费节点订阅链接">「5月3日」最高速度22.6M/S，2025年V2ray/Clash/Shadowrocket/SSR每天更新免费节点订阅链接</a></li>
-                        <li class="py-2"><a href="/news/article-111500.htm" title="兽药排名前十强 兽药排名前十强正规厂家">兽药排名前十强 兽药排名前十强正规厂家</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-5-23-clash-v2ray-ss-ssr.htm" title="「5月23日」最高速度22M/S，2025年Shadowrocket/SSR/Clash/V2ray每天更新免费节点订阅链接">「5月23日」最高速度22M/S，2025年Shadowrocket/SSR/Clash/V2ray每天更新免费节点订阅链接</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-5-27-free-v2ray.htm" title="「5月27日」最高速度19.4M/S，2025年V2ray/Shadowrocket/SSR/Clash每天更新免费节点订阅链接">「5月27日」最高速度19.4M/S，2025年V2ray/Shadowrocket/SSR/Clash每天更新免费节点订阅链接</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-5-20-free-high-speed-nodes.htm" title="「5月20日」最高速度19.4M/S，2025年SSR/Shadowrocket/Clash/V2ray每天更新免费节点订阅链接">「5月20日」最高速度19.4M/S，2025年SSR/Shadowrocket/Clash/V2ray每天更新免费节点订阅链接</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-6-6-node-share.htm" title="「6月6日」最高速度22.6M/S，2025年Clash/SSR/Shadowrocket/V2ray每天更新免费节点订阅链接">「6月6日」最高速度22.6M/S，2025年Clash/SSR/Shadowrocket/V2ray每天更新免费节点订阅链接</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-5-25-clash-v2ray-ss-ssr.htm" title="「5月25日」最高速度20.5M/S，2025年Shadowrocket/Clash/V2ray/SSR每天更新免费节点订阅链接">「5月25日」最高速度20.5M/S，2025年Shadowrocket/Clash/V2ray/SSR每天更新免费节点订阅链接</a></li>
                         <li class="py-2"><a href="/free-nodes/2025-5-28-node-share-links.htm" title="「5月28日」最高速度18.7M/S，2025年Shadowrocket/V2ray/Clash/SSR每天更新免费节点订阅链接">「5月28日」最高速度18.7M/S，2025年Shadowrocket/V2ray/Clash/SSR每天更新免费节点订阅链接</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-5-17-free-high-speed-nodes.htm" title="「5月17日」最高速度18.5M/S，2025年V2ray/Shadowrocket/Clash/SSR每天更新免费节点订阅链接">「5月17日」最高速度18.5M/S，2025年V2ray/Shadowrocket/Clash/SSR每天更新免费节点订阅链接</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-6-5-node-share.htm" title="「6月5日」最高速度19M/S，2025年SSR/V2ray/Shadowrocket/Clash每天更新免费节点订阅链接">「6月5日」最高速度19M/S，2025年SSR/V2ray/Shadowrocket/Clash每天更新免费节点订阅链接</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-5-7-free-v2ray.htm" title="「5月7日」最高速度22.4M/S，2025年SSR/V2ray/Clash/Shadowrocket每天更新免费节点订阅链接">「5月7日」最高速度22.4M/S，2025年SSR/V2ray/Clash/Shadowrocket每天更新免费节点订阅链接</a></li>
                         <li class="py-2"><a href="/free-nodes/2025-5-8-free-v2ray.htm" title="「5月8日」最高速度18.1M/S，2025年Clash/Shadowrocket/V2ray/SSR每天更新免费节点订阅链接">「5月8日」最高速度18.1M/S，2025年Clash/Shadowrocket/V2ray/SSR每天更新免费节点订阅链接</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-5-4-free-node-subscribe-links.htm" title="「5月4日」最高速度19.8M/S，2025年V2ray/Clash/SSR/Shadowrocket每天更新免费节点订阅链接">「5月4日」最高速度19.8M/S，2025年V2ray/Clash/SSR/Shadowrocket每天更新免费节点订阅链接</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-5-27-free-v2ray.htm" title="「5月27日」最高速度19.4M/S，2025年V2ray/Shadowrocket/SSR/Clash每天更新免费节点订阅链接">「5月27日」最高速度19.4M/S，2025年V2ray/Shadowrocket/SSR/Clash每天更新免费节点订阅链接</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-6-7-clash-v2ray-ss-ssr.htm" title="「6月7日」最高速度18.1M/S，2025年Shadowrocket/V2ray/SSR/Clash每天更新免费节点订阅链接">「6月7日」最高速度18.1M/S，2025年Shadowrocket/V2ray/SSR/Clash每天更新免费节点订阅链接</a></li>
                     </ul>
     </div>
 </div>
@@ -167,7 +232,7 @@
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
                         <li class="py-2">
-                <h4><span class="badge" style="float: right;">2</span> <a href="/date/2025-06/" title="2025-06 归档">2025-06</a></h4>
+                <h4><span class="badge" style="float: right;">7</span> <a href="/date/2025-06/" title="2025-06 归档">2025-06</a></h4>
             </li>
                         <li class="py-2">
                 <h4><span class="badge" style="float: right;">33</span> <a href="/date/2025-05/" title="2025-05 归档">2025-05</a></h4>
